--- a/shinobi_fmri/config.yaml
+++ b/shinobi_fmri/config.yaml
@@ -1,17 +1,21 @@
-# Shinobi fMRI Analysis Pipeline Configuration
-# This file is user-specific and not tracked by git
-# See config.yaml.template for setup instructions
+# Shinobi fMRI Analysis Pipeline Configuration Template
+#
+# SETUP INSTRUCTIONS:
+#   1. Copy this file to config.yaml:
+#      cp config.yaml.template config.yaml
+#   2. Replace all <PLACEHOLDER> values with your actual paths
+#   3. config.yaml is gitignored and will stay local to your machine
 
 # Data paths
 paths:
-  data: /home/hyruuk/DATA/neuromod/shinobi_data
+  data: <PATH_TO_YOUR_DATA>  # e.g., /home/user/DATA/neuromod/shinobi_data or /scratch/user/neuromod/shinobi2025
   figures: reports/figures
   tables: reports/tables
 
 # Python environment
 python:
-  local_bin: python
-  slurm_bin: python
+  local_bin: <PATH_TO_PYTHON>      # e.g., python or /home/user/python_envs/shinobi/bin/python
+  slurm_bin: <PATH_TO_PYTHON>      # e.g., python or ~/python_envs/shinobi/bin/python
 
 # Analysis parameters
 analysis:
