--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
 # local package
 -e .
 
-# external requirements
-click
-Sphinx
-coverage
-flake8
-python-dotenv>=0.5.1
-pyyaml
-nilearn
-tqdm
-scipy
-load_confounds
+# external requirements - all pinned for reproducibility
+click==8.1.8
+Sphinx==7.4.7
+coverage==7.10.7
+flake8==7.3.0
+python-dotenv==1.2.1
+pyyaml==6.0.3
+nilearn==0.12.1
+tqdm==4.67.1
+scipy==1.13.1
+load-confounds==0.12.0
 matplotlib==3.7.3
-psutil
-seaborn
-ptitprince
-pandas
-numpy
-atlasreader
-reportlab
-ipykernel
-tqdm_joblib
+psutil==7.1.3
+seaborn==0.11.0
+ptitprince==0.2.7
+pandas==2.3.3
+numpy==1.26.4
+atlasreader==0.3.2
+reportlab==4.4.5
+ipykernel==6.31.0
+tqdm_joblib==0.0.4
 
 # Task automation
-invoke>=2.0.0
+invoke==2.2.1
